# rag-with-ollama

./: .gitignore  01_apirest_client_ollama.py  04_ollama_module_show_model.py  05_ollama_create_model.py  06_categorizer.py  Modelfile  README.md  pyproject.toml
02_ollama_module_chat/: app.py
03_ollama_module_chat_stream/: app.py
06_categorizer/: app.py
07_rag_system_ollama/: 0701_build_rag_system_ollama.py  0702_pdf_rag_clean.py  0703_pdf_rag_streamlit.py  requirements.txt
data/: categorized_grocery_list.txt
