[project]
name = "rag-with-ollama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.0",
    "decouple>=0.0.7",
    "elevenlabs>=1.50.3",
    "fastembed>=0.5.0",
    "httpx>=0.27.2",
    "langchain>=0.3.14",
    "langchain-community>=0.3.13",
    "langchain-core>=0.3.29",
    "langchain-ollama>=0.2.2",
    "langchain-text-splitters>=0.3.4",
    "ollama>=0.4.5",
    "pdfplumber>=0.11.5",
    "pytesseract>=0.3.13",
    "requests>=2.32.3",
    "sentence-transformers>=3.3.1",
    "streamlit>=1.41.1",
    "tesseract>=0.1.3",
    "unstructured[all-docs]>=0.14.8",
]
